# ot-harjoitustyo24

./: .gitignore  README.md
dokumentaatio/: tuntikirjanpito.md  vaatimusmaarittely.md
laskarit/: viikko1.md
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: matkakortti.md  monopoli.md
sovellus/: hardware_data.csv  pyproject.toml  tasks.py  users.txt
sovellus/data/: testikuva07042024.ppm
sovellus/dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  testaus.md  tuntikirjanpito.md  vaatimusmaarittely.md
sovellus/src/: database_connection.py  gui.py  hardware.py  index.py  initialize_database.py  library_db_manager.py  library_gui.py  library_ui.py  login.py  register.py  ui.py  user_db_manager.py  users.txt
sovellus/src/entities/: hardware.py  software.py  user.py
sovellus/src/repositories/: library_db_manager.py  user_db_manager.py
sovellus/src/services/: library_service.py  user_service.py
sovellus/src/tests/: library_service_test.py  register_test.py  user_db_manager_test.py
sovellus/src/tests/repositories/: library_db_manager_test.py  user_db_manager_test.py
sovellus/src/tests/services/: library_service_test.py  user_service_test.py
sovellus/src/ui/: gui.py  library_gui.py  login_gui.py  register_gui.py  ui.py
