[tool.poetry]
name = "sovellus"
version = "0.1.0"
description = ""
authors = ["Lauri Huldin <127834326+LHuldin@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
invoke = "^2.2.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
coverage = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
